# DataStructuresAndAlgorytms

./: CMakeLists.txt  README.md  book2.txt  book3.txt  main.cpp
common/: arrayio.h  consoleutils.h  stringutils.h  testingutils.h  ui.h
task0/: lib.h  libCommon.h  libDynamic.h  libStatic.h  libVector.h  main.cpp  test.cpp
task1/: lib.h  main.cpp  test.cpp
task2/: lib.h  main.cpp  test.cpp
task3/: lib.h  main.cpp  test.cpp
task4/: lib.h  main.cpp  test.cpp
task5/: lib.h  main.cpp  test.cpp
task6/: lib.h  main.cpp  test.cpp
task7/: buslist.h  main.cpp  singlylinkedlist.h
task8/: stack.h
task9/: queue.h
